--- a/portraits.qmd
+++ b/portraits.qmd
@@ -888,7 +888,7 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line"><span class="line-number">683</span>Each day, Mary ate some,<br></span>
 <span class="verse-line">but this was a small portion.<br></span>
 <span class="verse-line">As soon as she had eaten up her bread,<br></span>
-<span class="verse-line">then she gathered the grass of the field.<br></span>
+<span class="verse-line">then she plucked the grass of the field.<br></span>
 <span class="verse-line">Like other beasts she ate it.<br></span>
 <span class="verse-line"><span class="line-number">688</span>None of this bothered her.<br></span>
 <span class="verse-line"><span class="folio-number">48v</span>Prone, she drew from a stream.<br></span>
