Made minor edits to Intro & Ch1; Added text and images for Ch2.1; added 'Chapter' to titles of all chapters; added Fig 2.1 and 2.2 to Ch2.1; Renamed other figures (special characters in T-E excerpt)

--- a/intro.qmd
+++ b/intro.qmd
@@ -36,7 +36,7 @@ Here, Nichols calls attention to the filtering effect of editorial practice: wha
 
 > Publishing decisions directly influence the canon of medieval literature by shaping what can be widely read, taught, and studied. Conversely, the established canon motivates publishing decisions: famous authors have steady markets. The history of publishing thus turns into the history of the canon. Editions, though, tend to have long shelf lives. … As a result, editions informed by outdated practices remain authoritative amid even the most recent scholarship. (193)
 
-In this light, the longstanding authority of older editions — not infrequently governed by assumptions we might now consider outdated — continues to shape the boundaries of the filed. And so, it is the flawed perception of editors as neutral transmitters of texts that must be re-examined so that what we read, study and teach remains aligned with the most current and rigorous understandings available to us.
+In this light, the longstanding authority of older editions — not infrequently governed by assumptions we might now consider outdated — continues to shape the boundaries of the field. And so, it is the flawed perception of editors as neutral transmitters of texts that must be re-examined so that what we read, study and teach remains aligned with the most current and rigorous understandings available to us.
 
 In taking the form of a digital edition, this dissertation seeks to disrupt the pervasive view in academia that editors and translators are merely conveying texts with minimal scholarly intervention and even without doing challenging, intellectual labor. As an editor, I seek to make Version T of *La Vie de sainte Marie l’Égyptienne* more legible to a wider audience, and as a *digital* editor, I advocate for the adoption of innovative methods to both strengthen and complicate our analysis of medieval texts, furthering the perpetual reexamination of our editing practices.
 
@@ -52,7 +52,7 @@ But why does Version T, among all the various French accounts of Mary’s life, 
 
 Though I am not at all opposed to viewing Mary the Egyptian as a ‘spiritually-empowered female,’ I am somewhat skeptical of this characterization being equally applied to versions in which she is not even the central character of the narrative.[^9] Version T pulls Mary the Egyptian from the margins of her own legend and makes her the central protagonist. This major narrative shift was clearly an intentional, meaningful choice on the part of the T-poet, and it warrants more analysis than it has received.
 
-Although Version T has been described as the “apex of the legend’s development” by Duncan Robertson (*Medieval Saints’ Lives *119), it has received relatively little scholarly attention in comparison to contemporary texts of other genres.[^10] A good number of pieces have been written addressing Rutebeuf’s later French version (Version R) of the saint’s legend,[^11] but Peter Dembowski, who does not include R in his edition*,* portrays R as merely a reshuffling of T with some two hundred verses inserted from Version O (*Marie L’Égyptienne *22-23).[^12] We might suspect that Version R’s relative popularity among modern scholars stems in part from the fact that we can attach the name of Rutebeuf to the text, reading the narrative through the self-acknowledged intentions of that known author who embeds himself within it,[^13] but also, thanks to the work of Michel Zink, Version R is the only French version of the Life of Mary the Egyptian that has been published in translation, making it far more accessible to modern readers. Similarly, ample of scholarship has been produced focusing on the Old English verse redaction, and we might draw some connection between this scholarly interest and the availability of the Old English poem thanks to the Magennis edition, which includes a modern English parallel-text translation.[^14] A great deal of scholarship has been published addressing the legend in the many other vernacular languages as well,[^15] especially the Spanish tradition, which is itself believed to make use of Version T as its source.[^16] There are only a handful, though, of articles and chapters that focus wholly and directly on T.[^17] These include editor of Version T Peter Dembowski’s discussion of the poem’s use of Anglo-Norman language;[^18] five pieces written by Duncan Robertson over several decades primarily concerned with the way the T-poet is able to render the Life into vernacular verse without sacrificing its spiritual core;[^19] a section of a chapter on gender in hagiography by Simon Gaunt in his monograph *Gender and Genre in Medieval French Literature* (1995);[^20] Cary Howie’s article addressing the relationship between the visibility of saintly bodies and notions of conversion;[^21] and portions of Emma Campbell’s *Medieval Saints’ Lives: The Gift, Kinship and Community in Old French Hagiography* (2008).[^22] These scholars of Version T have come to somewhat differing conclusions about the text, but overall, there has been a unified fixation on Mary the Egyptian’s sexuality as the key to understanding her legend.
+Although Version T has been described as the “apex of the legend’s development” by Duncan Robertson (*Medieval Saints’ Lives *119), it has received relatively little scholarly attention in comparison to contemporary texts of other genres.[^10] A good number of pieces have been written addressing Rutebeuf’s later French version (Version R) of the saint’s legend,[^11] but Peter Dembowski, who does not include R in his edition*,* portrays R as merely a reshuffling of T with some two hundred verses inserted from Version O (*Marie L’Égyptienne *22-23).[^12] We might suspect that Version R’s relative popularity among modern scholars stems in part from the fact that we can attach the name of Rutebeuf to the text, reading the narrative through the self-acknowledged intentions of that known author who embeds himself within it,[^13] but also, thanks to the work of Michel Zink, Version R is the only French version of the Life of Mary the Egyptian that has been published in translation, making it far more accessible to modern readers. Similarly, ample scholarship has been produced focusing on the Old English verse redaction, and we might draw some connection between this scholarly interest and the availability of the Old English poem thanks to the Magennis edition, which includes a modern English parallel-text translation.[^14] A great deal of scholarship has been published addressing the legend in the many other vernacular languages as well,[^15] especially the Spanish tradition, which is itself believed to make use of Version T as its source.[^16] There are only a handful, though, of articles and chapters that focus wholly and directly on T.[^17] These include editor of Version T Peter Dembowski’s discussion of the poem’s use of Anglo-Norman language;[^18] five pieces written by Duncan Robertson over several decades primarily concerned with the way the T-poet is able to render the Life into vernacular verse without sacrificing its spiritual core;[^19] a section of a chapter on gender in hagiography by Simon Gaunt in his monograph *Gender and Genre in Medieval French Literature* (1995);[^20] Cary Howie’s article addressing the relationship between the visibility of saintly bodies and notions of conversion;[^21] and portions of Emma Campbell’s *Medieval Saints’ Lives: The Gift, Kinship and Community in Old French Hagiography* (2008).[^22] These scholars of Version T have come to somewhat differing conclusions about the text, but overall, there has been a unified fixation on Mary the Egyptian’s sexuality as the key to understanding her legend.
 
 Robertson considers the translation of the saint’s Life into the French vernacular a signal of a renewal of interest in her Life. He points to the period as one in which the act of reading became particularly pertinent to spirituality, in which there was an upsurge in Marian devotion, and in which hagiography was influenced by “poets and romancers” (“Poem and Spirit” 306) to suit the tastes of a lay audience. He insists that the text is not a vulgarization of the saint’s Life; rather the poet demonstrates a clear sense of orthodoxy (“Poem and Spirit” 316). For Robertson, the content and rhetoric of the text when combined become a “manifestation of Grace” (“Poem and Spirit” 319), exemplifying the paradoxical nature of Mary the Egyptian as a holy sinner. She invokes the Virgin, who “is not merely a person but an incarnate formal principle, the universal reconciliation of contraries — nothing more and nothing less than poetry itself” (“Poem and Spirit” 318). His assessment, however, is not shared by Simon Gaunt who emphasizes the sexual pleasure the text may have been intended to arouse in a male audience at the expense of women:
 
@@ -98,9 +98,9 @@ In fact, if we consider the verses describing Mary the Egyptian’s breasts acro
 
 > T-A: “Les **mameles** de cele dame” (v.177) → “N’avoit plus char en ses **traians**” (v.643)  
 T-B: “& si avoit beles **mameles**” (v.171) → [verse omitted in B]  
-T-C: “Chascun des **traianz** la dame” (v.179) → “N’avoit plus char en sa **traiant**” (v.655)  
-T-D: “Chascun des **traianz** a la dume” (v.175) → “N’aveit plus char en sun **traiant**” (v.645)  
-T-E: “L’un des **traians** de cele dome” (v.178) → “N’avoit de char en ses **traians**” (v.645)  
+T-C: “Chascun des **traianz** la dame” (v.179) → “N’avoit plus char en sa **triant**” (v.655)  
+T-D: “chascun des **traianz** a la dune” (v.175) → “N’aveit plus char en sun **traiant**” (v.645)  
+T-E: “L’un des **traians** de cele domme” (v.178) → “N’avoit de char en ses **traians**” (v.645)  
 T-L: “Cacune **traiant** de la dome” → “N’avoit plus char en son **traiant**”[^37]  
 T-F^1^: [offers only the first 10.5 verses of Portrait 1]  
 T-F^2^: [both portraits missing]  
@@ -148,9 +148,9 @@ Finally, as the entirety of this dissertation is presented as a digital document
 [^1]: [](#ftnt_ref1) Special Collections Manuscript Curator and Archivist at the John Rylands Library Elizabeth Gow kindly supplied me with a pdf scan of this letter via email on August 24th, 2024.
 [^2]: [](#ftnt_ref2) According to Gow, The John Rylands no longer has a microfilm copy of French 6, and Uppsala University is not in possession of such a microfilm or any of Rankka’s papers. Uppsala Special Collections Archivist Ina-Maria Jansson did, however, supply me with Rankka’s obituary, which describes Rankka’s commitment to editing and translating works of medieval French literature into Swedish through the later years of his life (personal correspondence via email 8-13 Aug 2024).
 [^3]: [](#ftnt_ref3) It is possible that Rankka was supplied with this same handlist, but he does not include it in the bibliography of his edition.
-[^4]: [](#ftnt_ref4) “Mais malement fu enseignie” (v.60). Unless otherwise stated, all verses in this dissertation will be cited in reference to manuscript copy T-A (Paris, Bibliothèque nationale de France, Français 23112), which is the base text of Peter Dembowski’s edition of Version T in *La Vie de sainte Marie l’Égyptienne: Versions en ancien et en moyen français* (1977). > The term ‘verse’ is used in this dissertation to refer to the the single metrical unit of poetry, and ‘line’ refers to a single row of text copied within a manuscript. All translations, unless otherwise stated, are my own.
+[^4]: [](#ftnt_ref4) “Mais malement fu enseignie” (v.60). Unless otherwise indicated, all quotations of Version T in this dissertation will be taken from manuscript copy T-A (Paris, Bibliothèque nationale de France, Français 23112), which is the base text of Peter Dembowski’s edition of Version T in *La Vie de sainte Marie l’Égyptienne: Versions en ancien et en moyen français* (1977). > The term ‘verse’ is used in this dissertation to refer to the the single metrical unit of poetry, and ‘line’ refers to a single row of text copied within a manuscript. All translations, unless otherwise stated, are my own.
 [^5]: [](#ftnt_ref5) “D’erbe vesqui & de rachines / Xvii. ans. par les gastines / Puis fu .xxx. ans onc ne manga / Se angeles ne li aporta” // “On grass she lived and on roots / for seventeen years in the wilderness. / Then for thirty years, she ate nothing / unless an angel brought it to her.” (vv.681-684)
-[^6]: [](#ftnt_ref6) “Ne ainc en trestot le boscaige / Ne li vint puis beste salvaige / Ne autre vive creature / Par le gaut va toute seure” // “Never in all the wood / did any wild beast come to her thereafter / nor any other living creature. / Through the forest, she goes completely safe.” (vv.695-698)
+[^6]: [](#ftnt_ref6) “Ne ainc en trestot le boscaige / Ne li vint puis beste salvaige / Ne autre vive creature / Par le gaut va toute seure” // “Never in all the wood / did any wild beast come to her thereafter / nor any other living creature. / Through the forest, she goes totally assured.” (vv.695-698)
 [^7]: [](#ftnt_ref7) Version T is one of about a dozen versions in the French tradition alone. The other versions — as described by Dembowski — are X, V, W, N, O, O1, Z, U, Y, L1, L2, L3, and R. Version T is considered one of the earliest of these, dating at least to the late twelfth century according to Alfred T. Baker and confirmed by Dembowski (17). Version X was believed by > Hermann Knust to be the source for T, but Paul Meyer correctly judged — according to Dembowski (17) — the inverse to be the case. Dembowski suggests X was likely written soon after T though probably near start of the thirteenth century (17). Version V, dating to the fifteenth century, likely derives from X as Dembowski notes the two share the unique accusation of incest as being among Mary the Egyptian’s many sins (18). Dembowski dates Version W — a short Anglo-Norman poem likely translated from a Latin source — to the end of the twelfth century, making it a rough contemporary of Version T (18). Dembowski repeats Hilding> Kjellman’s assessment that Version N likely dates to somewhere between 1230 and 1250 based on a linguistic study of the collection of miracles of the Virgin in which N is included (19). Dembowski says that the N poet was likely following a Latin prose source, but he cannot exclude the possibility that the N poet had access to Version T too due to some resemblance between some of their verses (18-19). Version O is the translation of an unidentified Latin version of Sophronius and the primary source of Version R (19). Based on the linguistic evidence, Dembowski would not date Version O any later than 1250. Version O> 1> is a significantly abridged redaction of Version O, which Dembowski chose to feature separately “de ne pas trop encombrer l’appareil critique et ne pas le rendre à peu inutilisable” (20). According to Dembowski, Version Z is contemporary with O but was likely the translation of a simpler, more concise Latin text (20). Version U is of a similar type to O and Z — though less than half the length of O —, dating to the second half of the thirteenth century (20-21). Version Y is about a third of the length of Version O and dates to the mid-fifteenth century (21). Finally, L> 1> , L> 2> , and L> 3> are French translations of the > Golden Legend> of Jacobus de Voragine (21) with L> 1> dating to the end of the thirteenth century (263), L> 2> to the second quarter of the fourteenth century (269), and L> 3> anterior to the fifteenth century (275).
 [^8]: [](#ftnt_ref8) Other than Version R, which is of comparable length but is a derivative of T, Version W, which is made up of only 140 lines, and Version N, which consists of 407 lines, all of the other surviving versions in the French tradition are written in prose.
 [^9]: [](#ftnt_ref9) The French versions that are narratively centered on Mary are T, X, V, W, N, and R — all of these apparently deriving structurally from T —, and the versions that are narratively centered on her counterpart Zosimas are O, Z, U, Y, and L.
@@ -183,7 +183,7 @@ Finally, as the entirety of this dissertation is presented as a digital document
 [^36]: [](#ftnt_ref36) The reader of Zozimas-centered versions of the legend is denied this transformation as Mary the Egyptian is only encountered in her ascetic form. Pinto-Mathieu describes how Jacobus de Voragine actively denies Mary the Egyptian any redeeming aesthetic qualities, presenting her exclusively as “un diable noirci” (100).
 [^37]: [](#ftnt_ref37) Dembowski provides these variants in his edition (75n177; 88n643).
 [^38]: [](#ftnt_ref38) “A iceu tens n’ert si bele femme / kar ele estoit sur tutes gemme” (vv.163-164 of T-C)
-[^39]: [](#ftnt_ref39) In T-A, she is called *mossue * once: “N’iert merveille se iert moussue” (v. 664). In T-B, she is called *mossue * twice and *polhue * once: “& de blanc poilh tote mossue / Noire & polhue ert la poitrine … N’ert mervelhe s’ele ert mossue” (vv.590-591 & 607 of T-B). In T-C, she is called*mossue * three times: “e de blanc peil tote mossue / Noire e mossue la peitrine … Ne fu merveille s’ert mossue” (vv.652-653 & 676 of T-C). She is only called*mossue * once in copies T-D and T-E: “N’ert merveille s’ele ert mossue” (v.666 of T-D); “N’iert par merveille s’iert molsue” (v.666 of T-E). And although I cannot personally confirm the full verse as it is written in T-L due to my lack of access to the British Library, Dembowski notes the presence of*mossue* as a variation present in this copy as well (88n641).
+[^39]: [](#ftnt_ref39) In T-A, she is called *mossue * once: “N’iert merveille se iert moussue” (v. 664). In T-B, she is called *mossue * twice and *polhue * once: “& de blanc poilh tote mossue / Noire & polhue ert la poitrine … N’ert mervelhe s’ele ert mossue” (vv.590-591 & 607 of T-B). In T-C, she is called*mossue * three times: “e de blanc peil tote mossue / Noire e mossue ert la peitrine … Ne fu merveille s’ert mossue” (vv.652-653 & 676 of T-C). She is only called*mossue * once in copies T-D and T-E: “N’ert merveille s’ele ert mossue” (v.666 of T-D); “N’iert par merveille si ert molsue” (v.666 of T-E). And although I cannot personally confirm the full verse as it is written in T-L due to my lack of access to the British Library, Dembowski notes the presence of*mossue* as a variation present in this copy as well (88n641).
 [^40]: [](#ftnt_ref40) On the issue of ‘clutter,’ Tufte argues, “‘Clutter’ in data graphics is evidence that your models don’t fit the data – and that you know it. You also know that your summary graphics cover up contrary data and depict dubious thresholds not present in the data set. Such cheats are obvious and easily detected, and damage your credibility” (Tufte 101). In traditional editions, ‘clutter’ is tucked away in the extensive paratextual notes — if such notes are included at all — that the interested reader must then decode in order to fully grasp both the source material and the editor’s interventions in order to craft well-founded arguments on the available textual data.
 [^41]: [](#ftnt_ref41) Cerquiglini also mentions Jean Rychner’s *Le Lai de Lanval *(1958) and Willem Noomen and Nico Van den Boogaard’s* Nouveau Recueil complet des fabliaux* (1983).
 [^42]: [](#ftnt_ref42) These copies have been given the labels A, B, C, D, E, L, F1, and F2. Alfred T. Baker is responsible for labeling the many versions and manuscript copies of the French Mary the Egyptian legend with their current sigla in his 1916 edition. Dembowski uses Baker’s system in his own 1977 edition, building on Baker’s labeling where appropriate. For example, T-F1 was unknown to Baker, and so, Dembowski is responsible for lettering the T fragments with superscript numbers. I follow Dembowski’s labels, and I provide more in-depth descriptions of each of the T copies in Appendix 1 of this dissertation.
