--- a/chapter2-2.qmd
+++ b/chapter2-2.qmd
@@ -1,5 +1,5 @@
 ---
-title: "2.2 An Approach to Editing Version T, Part 2"
+title: "Chapter 2.2 An Approach to Editing Version T, Part 2"
 ---
 
 ```{r setup, include=FALSE}
