--- a/chapter3.qmd
+++ b/chapter3.qmd
@@ -1,5 +1,5 @@
 ---
-title: "3. A Cross-Copy Close Reading"
+title: "Chapter 3. A Cross-Copy Close Reading of the T Portraits"
 ---
 
 ```{r setup, include=FALSE}
